Splitting Medgam into two distinct parts.

--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -258,11 +258,16 @@ rt.sereyu { color: #daa520; }
   <section>
   <h3 id="megdam"><a href="#megdam">Medgam (መድጋም)</a></h3>
   <p><em>Medgam</em> are Ethiopic numerals that appear in left side margin notes and signal that the line they are written adjacent to should be repeated
-     (in accordance with the numeral&rsquo;s value). When a medgam number is present, the verse it applies to is first performed in vocal chant
-     only following the lowest line of notation (this is known as <dfn>Qome Zaima</dfn>).  Incremental passes will follow successive lines upward
-     and will likely be accompanied by the instruments sistrum and drum.  Unlike Beit, the medgam number may be rendered in a smaller point size
-     (50-70% regular height as with the miliket). [<em>TBD: Vet this, medgam may also, or primarily, represent alternative vocalizations</em>] More than
-     one medgam may apply to a line of chant, which each medgam applies to separate groupings of interlinear lines but all within the same <a href="#selt">mode.</a></p>
+     (in accordance with the numeral&rsquo;s value). When a medgam number is present, the verse it applies to is first performed in the vocal chant
+     indicated by the lowest line of notation (this is known as <dfn>Qome Zaima</dfn> <em>TBD: verify that this is always the case</em>).  Incremental passes
+     will follow successive lines upward and will likely be accompanied by the instruments sistrum and drum.  Unlike Beit, the medgam number may be rendered
+     in a smaller point size (50-70% regular height as with the miliket).</p>
+  </section>
+  <section>
+  <h3 id="megdam"><a href="#alternative">Alternative (TBD)</a></h3>
+  <p><em>&ldquo;Alternative&rdquo;</em> is a placeholder name for a component that is visually identical to a <a href="#medgam">Medgam</a> in that it is
+     a scaled numeral placed in the margin, however with different semantics. An <code>alternative</code> does not indicate the repetition of a verse, rather,
+     it indicates the presence of one or more alternate vocalizations of the verse in the notation lines above the present.</p>
   </section>
   <section>
   <h3 id="haleita"><a href="#haleita">Halleluya Numbers (ሃሌታ)</a></h3>
@@ -284,7 +289,7 @@ rt.sereyu { color: #daa520; }
      to view scope and reference expansions.</p>
 
 <div>
-<div style="margin-left: 80px; margin-right: 160px; float:left; height: 800px">
+<div style="margin-left: 80px; margin-right: 160px; float:left; height: 800px;">
   <figure>
    <p style="border: 1px solid black; width: 500px;">
    <img style="vertical-align:top;" src="images/DiguaPage5-Sample.jpg" width="500px" style="border: black 1px solid;">
@@ -295,7 +300,7 @@ rt.sereyu { color: #daa520; }
 <div style="width: 960px; margin: 0 auto; background: white; padding: 20px 0;">
 <div style="margin: 0 auto; font-size:30px; font-family: Abyssinica SIL;">
 <div class="beit tooltip">ዑ<span class="tooltiptext">ስምዑ፡ዘንተ፡<br/>Beit (ቤት)</span></div><span class="beitscope"><div id="ስምዑ_ዘንተ" onmouseover="openMessage(this);" onmouseout="closeMessage(this);" class="haleita tooltip">በ<span style="color: red;">፬</span><span class="tooltiptext">Halleluya Number<br/>(ሃሌታ)</span></div><ruby><rb>ወ</rb><rt>᎑</rt></ruby>ነ<ruby><rb>ገረ</rb><rt>ወቃ</rt></ruby>፡ስም<ruby><rb>የ</rb><rt>᎐</rt></ruby>፡ዮሐን<ruby><rb>ስ</rb><rt style="text-align: right;">ር</rt></ruby>፡ወይ<ruby><rb>ቢ</rb><rt>ሊ</rt></ruby>፡<ruby><rb>ር</rb><rt>ሀየ</rt>ኢ</ruby><br/>
-<div class="medgam tooltip" id="medgam-geez" onmouseover="highlightMedgam(this);" onmouseout="unhighlightMedgam(this);">፪<span class="tooltiptext">Medgam<br/>(መድጋም)</span></div><ruby><rb>ኩ</rb><rt>ዋ᎙</rt></ruby>፡መን<ruby><rb>ፈ</rb><rt>ሊ</rt></ruby>ስ፡ቅ<ruby><rb>ዱ</rb><rt>᎖</rt><rb>ስ</rb><rt>ነቢ</rt></ruby
+<div class="medgam tooltip" id="medgam-geez" onmouseover="highlightMedgam(this);" onmouseout="unhighlightMedgam(this);">፪<span class="tooltiptext">Alternative</span></div><ruby><rb>ኩ</rb><rt>ዋ᎙</rt></ruby>፡መን<ruby><rb>ፈ</rb><rt>ሊ</rt></ruby>ስ፡ቅ<ruby><rb>ዱ</rb><rt>᎖</rt><rb>ስ</rb><rt>ነቢ</rt></ruby
 >፡<div style="display: inline-block; position:relative; width: 50px; vertical-align:bottom;"><ruby class="row2md medgam-geez"><rb>ከ</rb><rt>᎑</rt><rb>መ</rb><rt>፡</rt></ruby><ruby class="row1md"><rb>ከ</rb><rt>ቡር</rt><rb>መ</rb><rt>᎖᎔</rt></ruby></div>፡<ruby><rb>ር</rb><rt>᎔</rt></ruby>ግብ፡<ruby><rb>ወ</rb><rt>᎑</rt></ruby>ረ<ruby><rb>ደ</rb><rt>ሉ᎙</rt></ruby>፡ክ<br/>
 ማ<ruby><rb>ሁ</rb><rt>ወቃ</rt></ruby>፡ኮ<ruby><rb>ነ</rb><rt>᎐</rt></ruby>፡በቢታን<ruby><rb>ያ</rb><rt>ር</rt></ruby>፡ደ<ruby><rb>ጋ</rb><rt>ሊ</rt></ruby>፡ወ<ruby><rb>ድ</rb><rt>ሊ </rt></ruby>ድቅ<ruby><rb>ስ</rb><rt>ዋ᎙</rt></ruby>፡ዘፈ<br/>
 የ<ruby><rb>ሱ</rb><rt>᎓</rt><rb>ስ</rb><rt>ሠ</rt></ruby>፡ክርስ<ruby><rb>ቶ</rb><rt>ሊ </rt></ruby>ስ፡<ruby><rb>ኮ</rb><rt>᎖</rt><rb>ነ</rb><rt>ነቢ </rt></ruby>፡እስ<ruby><rb>መ</rb><rt>ከመ</rt></ruby>፡እም<ruby><rb>ተ</rb><rt>᎖</rt><rb>ረ</rb><rt>᎘</rt></ruby>ፈ፡<br/></span>
