Added <rb> around hulet neteb in Use Case 17 so that 2nd layer can be hidden.

--- a/zaima/ZaimaUseCases.html
+++ b/zaima/ZaimaUseCases.html
@@ -1821,7 +1821,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>፡ን</rb><rt>&nbsp;᎑</rt>
       <rb>ዌ</rb><rt>᎓</rt>
       <rb>ድ</rb><rt>᎖᎖</rt>
-      <rb>ስ</rb><rt>᎑</rt>፡<rb>እ</rb><rt>&nbsp;᎗</rt>
+      <rb>ስ</rb><rt>᎑</rt><rb>፡</rb><rb>እ</rb><rt>&nbsp;᎗</rt>
       <rb>ግዚ</rb><rt></rt>
       <rb>ኦ</rb><rt>ሰ</rt>
     </ruby>
@@ -1831,7 +1831,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ከ</rb><rt>ቱ</rt><rb>፡ን</rb><rt>&nbsp;᎑</rt>
       <rb>ዌ</rb><rt>᎖</rt>
       <rb>ድ</rb><rt>᎖</rt>
-      <rb>ስ</rb><rt>᎑</rt>፡<rb>እ</rb><rt>&nbsp;᎗</rt>
+      <rb>ስ</rb><rt>᎑</rt><rb>፡</rb><rb>እ</rb><rt>&nbsp;᎗</rt>
       <rb>ግዚ</rb><rt></rt>
       <rb>ኦ</rb><rt>ሰ</rt>፡
     </ruby>
