Fix in Use Case 3, correcting an earlier copy and paste.

--- a/zaima/ZaimaUseCases.html
+++ b/zaima/ZaimaUseCases.html
@@ -425,7 +425,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
     </ruby>
     <ruby class="row2ex">
       <rb>ሊ</rb><rt>᎐&nbsp;</rt>
-      <rb>ባኖስ</rb><rt>᎑ደረ᎓᎔᎖᎖</rt>
+      <rb>ባኖስ</rb><rt>᎓᎔᎖᎓᎔᎓᎔᎖᎖</rt>
       <rb>ሃ</rb><rt>᎖᎖</rt>
       <rb>፡</rb><rt></rt>
       <rb>ና</rb><rt>᎐</rt>
@@ -469,7 +469,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
     </ruby>
     <ruby class="row2ex">
       <rb>ሊ</rb><rt>᎐&nbsp;</rt>
-      <rb>ባኖስ</rb><rt>᎑ደረ᎓᎔᎖᎖</rt>
+      <rb>ባኖስ</rb><rt>᎓᎔᎖᎓᎔᎓᎔᎖᎖</rt>
       <rb>ሃ</rb><rt>᎖᎖</rt>
       <rb>፡</rb><rt></rt>
       <rb>ና</rb><rt>᎐</rt>
@@ -1876,7 +1876,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>፡ን</rb><rt>&nbsp;᎑</rt>
       <rb>ዌ</rb><rt>᎓</rt>
       <rb>ድ</rb><rt>᎖᎖</rt>
-      <rb>ስ</rb><rt>᎑</rt>፡<rb>እ</rb><rt><span>&nbsp;᎗</span></rt>
+      <rb>ስ</rb><rt>᎑</rt><rb>፡</rb><rb>እ</rb><rt><span>&nbsp;᎗</span></rt>
       <rb>ግዚ</rb><rt></rt>
       <rb>ኦ</rb><rt>ሰ</rt>፡
     </ruby>
@@ -1886,7 +1886,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ከ</rb><rt>ቱ</rt><rb>፡ን</rb><rt>&nbsp;᎑</rt>
       <rb>ዌ</rb><rt>᎖</rt>
       <rb>ድ</rb><rt>᎖</rt>
-      <rb>ስ</rb><rt>᎑</rt>፡<rb>እ</rb><rt>&nbsp;᎗</rt>
+      <rb>ስ</rb><rt>᎑</rt><rb>፡</rb><rb>እ</rb><rt>&nbsp;᎗</rt>
       <rb>ግዚ</rb><rt></rt>
       <rb>ኦ</rb><rt>ሰ</rt>፡
     </ruby>
