--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -264,9 +264,9 @@ rt.sereyu { color: #daa520; }
      in a smaller point size (50-70% regular height as with the miliket).</p>
   </section>
   <section>
-  <h3 id="megdam"><a href="#alternative">Alternative (TBD)</a></h3>
-  <p><em>&ldquo;Alternative&rdquo;</em> is a placeholder name for a component that is visually identical to a <a href="#medgam">Medgam</a> in that it is
-     a scaled numeral placed in the margin, however with different semantics. An <code>alternative</code> does not indicate the repetition of a verse, rather,
+  <h3 id="megdam"><a href="#alternative">Alternative (ምረጥ)</a></h3>
+  <p><em>ምረጥ</em> (also called &ldquo;ምርጫ&rdquo;) is visually identical to a <a href="#medgam">Medgam</a> in that it is a scaled numeral placed in the margin,
+     however it carries different semantics. An <code>alternative</code> does not indicate the repetition of a verse, rather,
      it indicates the presence of one or more alternate vocalizations of the verse in the notation lines above the present.</p>
   </section>
   <section>
