--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -206,7 +206,7 @@ rt.sereyu { color: #daa520; }
   given to a tradition of Ethiopian and Eritrean Orthodox Christian hymns sung in chant. Zaima recitation relies on a sophisticated system of chant notation
   marks similar in principal to other chanting traditions such as Znamenny, Syric, Byzantine and Hebrew cantillation.</p>
   <p>Zaima notation comprises separate systems of Qirts (ቅርጽ) and Miliket (ምልክት) which are used together and written at half scale above the hymn text.
-  The systems are used together to denote the vocal inflection of base text hymn that they appear over.</p>
+  The systems are used together to denote the vocal inflection of base text (ዘር) hymn that they appear over.</p>
   <p>Zaima often features more than one interlinear line of notation  that are fully independent and never vocalized together. The
   notation lines may present a different &ldquo;mode&rdquo; (ስልት) of chant appropriate for a given occasion such as a celebration or memorial. A line may
   also present a different melody for the verse when it is repeated.</p>
@@ -259,7 +259,7 @@ rt.sereyu { color: #daa520; }
   <h3 id="megdam"><a href="#megdam">Medgam (መድጋም)</a></h3>
   <p><em>Medgam</em> are Ethiopic numerals that appear in left side margin notes and signal that the line they are written adjacent to should be repeated
      (in accordance with the numeral&rsquo;s value). When a medgam number is present, the verse it applies to is first performed in the vocal chant
-     indicated by the lowest line of notation (this is known as <dfn>Qome Zaima</dfn> <em>TBD: verify that this is always the case</em>).  Incremental passes
+     indicated by the lowest line of notation (known as እናት፡ዜማ፡).  Incremental passes
      will follow successive lines upward and will likely be accompanied by the instruments sistrum and drum.  Unlike Beit, the medgam number may be rendered
      in a smaller point size (50-70% regular height as with the miliket).</p>
   </section>
@@ -299,7 +299,7 @@ rt.sereyu { color: #daa520; }
 </div>
 <div style="width: 960px; margin: 0 auto; background: white; padding: 20px 0;">
 <div style="margin: 0 auto; font-size:30px; font-family: Abyssinica SIL;">
-<div class="beit tooltip">ዑ<span class="tooltiptext">ስምዑ፡ዘንተ፡<br/>Beit (ቤት)</span></div><span class="beitscope"><div id="ስምዑ_ዘንተ" onmouseover="openMessage(this);" onmouseout="closeMessage(this);" class="haleita tooltip">በ<span style="color: red;">፬</span><span class="tooltiptext">Halleluya Number<br/>(ሃሌታ)</span></div><ruby><rb>ወ</rb><rt>᎑</rt></ruby>ነ<ruby><rb>ገረ</rb><rt>ወቃ</rt></ruby>፡ስም<ruby><rb>የ</rb><rt>᎐</rt></ruby>፡ዮሐን<ruby><rb>ስ</rb><rt style="text-align: right;">ር</rt></ruby>፡ወይ<ruby><rb>ቢ</rb><rt>ሊ</rt></ruby>፡<ruby><rb>ር</rb><rt>ሀየ</rt>ኢ</ruby><br/>
+<div class="beit tooltip">ዑ<span class="tooltiptext">ስምዑ፡ዘንተ፡<br/>Beit (ቤት)</span></div><span class="beitscope"><div id="ስምዑ_ዘንተ" onmouseover="openMessage(this);" onmouseout="closeMessage(this);" class="haleita tooltip">በ<span style="color: red;">፬</span><span class="tooltiptext">Halleluya Number<br/>(ሃሌታ)</span></div><ruby><rb>ወ</rb><rt>᎑</rt></ruby>ነ<ruby><rb>ገረ</rb><rt>ወቃ</rt></ruby>፡ስም<ruby><rb>ዖ</rb><rt>&nbsp;᎐</rt></ruby>፡ዮሐን<ruby><rb>ስ</rb><rt style="text-align: right;">ር</rt></ruby>፡ወይ<ruby><rb>ቢ</rb><rt>ሊ</rt></ruby>፡<ruby><rb>ር</rb><rt>ሀየ</rt>ኢ</ruby><br/>
 <div class="medgam tooltip" id="medgam-geez" onmouseover="highlightMedgam(this);" onmouseout="unhighlightMedgam(this);">፪<span class="tooltiptext">Alternative</span></div><ruby><rb>ኩ</rb><rt>ዋ᎙</rt></ruby>፡መን<ruby><rb>ፈ</rb><rt>ሊ</rt></ruby>ስ፡ቅ<ruby><rb>ዱ</rb><rt>᎖</rt><rb>ስ</rb><rt>ነቢ</rt></ruby
 >፡<div style="display: inline-block; position:relative; width: 50px; vertical-align:bottom;"><ruby class="row2md medgam-geez"><rb>ከ</rb><rt>᎑</rt><rb>መ</rb><rt>፡</rt></ruby><ruby class="row1md"><rb>ከ</rb><rt>ቡር</rt><rb>መ</rb><rt>᎖᎔</rt></ruby></div>፡<ruby><rb>ር</rb><rt>᎔</rt></ruby>ግብ፡<ruby><rb>ወ</rb><rt>᎑</rt></ruby>ረ<ruby><rb>ደ</rb><rt>ሉ᎙</rt></ruby>፡ክ<br/>
 ማ<ruby><rb>ሁ</rb><rt>ወቃ</rt></ruby>፡ኮ<ruby><rb>ነ</rb><rt>᎐</rt></ruby>፡በቢታን<ruby><rb>ያ</rb><rt>ር</rt></ruby>፡ደ<ruby><rb>ጋ</rb><rt>ሊ</rt></ruby>፡ወ<ruby><rb>ድ</rb><rt>ሊ </rt></ruby>ድቅ<ruby><rb>ስ</rb><rt>ዋ᎙</rt></ruby>፡ዘፈ<br/>
