Some typographical and spelling corrections.

--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -223,7 +223,7 @@ rt.sereyu { color: #daa520; }
    three modes is Ge&rsquo;ez (ግዕዝ), which in fact means &ldquo;first&rdquo; in many contexts. It is the most frequent mode characterized by a strong,
    light and plain melody for everyday use (a &ldquo;base&rdquo; mode).
    Ezil (ዕዝል) is somber and heavy sounding, its in a lower range than Ge&rsquo;ez mode and is used during fasting (such as during Lent), vigils (for example
-   during Holy Week)and funerals.  By convention, Ezil notation will be rendered in red.
+   during Holy Week) and funerals.  By convention, Ezil notation will be rendered in red.
    Araray (ዓራራይ) is the upbeat, higher range mode characterized by strong, light and even jubilant.
    The mode is sometimes indicated within the hymn text or in a margin note (left side) but generally not as the practitioner is expected to
    know the appropriate mode by virtue of his training or by inspection of the <a href="#miliket">Miliket</a>.
@@ -231,18 +231,18 @@ rt.sereyu { color: #daa520; }
   </section>
   <section>
   <h3 id="qirts"><a href="#qirts">Qirts (ቅርጽ)</a></h3>
-  <p><em>Qirts</em>, or <em>YeFidel Qirts</em>, are notation marks used soley to denote voice inflection in zaima and are rendered in the interlinear notation lines.
+  <p><em>Qirts</em>, or <em>YeFidel Qirts</em>, are notation marks used solely to denote voice inflection in zaima and are rendered in the interlinear notation lines.
   They may be combined into chords for emphasis or modulation.
   Though some authors will apply a broad definition for <dfn>neumes</dfn> that include qirts marks, the qirts are generally not classified as such.
   Unlike typical neumes, qirts shapes do not reflect vocalization and their position does not indicate pitch. A subject of debate by purists,
-  two special letters from the syllabary will be recognized as qirts.  These two are &lsquo;ር&rsquo;, short for &ldquo;አንብር&rsquo; (Anber) and
+  two special letters from the syllabary will be recognized as qirts.  These two are &lsquo;ር&rsquo;, short for &ldquo;አንብር&rdquo; (Anber) and
   &lsquo;ስ&rsquo; short for &ldquo;ደርስ&rdquo; (Dires). Anber and Dires are a special case of an abbreviation that is not grounded by a
   <a href="#sereyu">Sereyu</a> as are the <a href="#miliket">Miliket</a> which make them more akin to the atomic qirts.</p>
   </section>
   <section>
   <h3 id="miliket"><a href="#miliket">Miliket (ምልክት)</a></h3>
   <p><em>Miliket</em> are rendered on the interlinear notation lines and make up the bulk of zaima notation. Miliket number in the many hundreds and are
-  abbreviations of a single word or of a few words. Accordingly miliket are mnemonic in utility and are classified as <dfn>ekphonetic</dfn> notation in
+  abbreviations of a single word or of a few words. Accordingly, miliket are mnemonic in utility and are classified as <dfn>ekphonetic</dfn> notation in
   music theory. Like qirts the miliket define vocalization for the letters or word that they are positioned
   over. Miliket are specified by a context where the miliket itself was a word or phrase sung in the base text hymn and may have had qirts or
   other miliket applied to it. The context that grounds a miliket is known as its <a href="#sereyu">Sereyu</a>. Unlike qirts which will be
@@ -270,9 +270,9 @@ rt.sereyu { color: #daa520; }
      it indicates the presence of one or more alternate vocalizations of the verse in the notation lines above the present.</p>
   </section>
   <section>
-  <h3 id="haleita"><a href="#haleita">Halleluya Numbers (ሃሌታ)</a></h3>
-  <p><em>Haleita</em> or &ldquo;halleluya numbers&rdquo; are rendered in the hymn line and are another system of reference to an entry in a
-   &ldquo;haleita table&rdquo; (<em>አንቀጸ፡ሃሌታ፡</em>) which indicates how the halleluya melody should be sung (and in turn may include one or more notaion rows).
+  <h3 id="haleita"><a href="#haleita">Hallelujah Numbers (ሃሌታ)</a></h3>
+  <p><em>Haleita</em> or &ldquo;hallelujah numbers&rdquo; are rendered in the hymn line and are another system of reference to an entry in a
+   &ldquo;haleita table&rdquo; (<em>አንቀጸ፡ሃሌታ፡</em>) which indicates how the hallelujah melody should be sung (and in turn may include one or more notation rows).
    The system is similar to miliket referencing and is grounded in a <a href="#beit">Beit</a> context.
   </p>
   <section>
