Added missing images reference for p43 of Mezgebe Fidel.

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
           <figcaption>Typeface change for emphasis found in <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite> by Kidane Wolde Kifle.</figcaption>
         </figure>
         <figure id="kwk_mezgebe_fidel_page_43"> <img src="images/kwk-mezgebe-fidel-page-43-font-size-increase-for-emphasis.png" alt=" " />
-          <figcaption>Typeface size change for emphasis found in <cite>Mezgebe Fidel</cite> by Kidane Wolde Kifle.</figcaption>
+          <figcaption>Typeface size change for emphasis found in <cite>Mazgaba Fidal</cite> by Kidane Wolde Kifle.</figcaption>
         </figure>
         <div class="issues">
           <p>Issues/Questions:</p>
@@ -2193,6 +2193,14 @@
         <span style="margin-left:2em;"><cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite>, K. W. Kifle. Pages 65 &amp; 159. Artistic Printers, 1955 (1948 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
         <span style="margin-left:2em;" lang="gez"><cite>መጽሐፈ፡ሰዋስው፡ወግስ፡ወመዝገበ፡ቃላት፡ሐዲስ</cite>፣ ኪዳነ፡ወልድ፡ክፍሌ። ገጾች ፷፭ እና ፻፶፱። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።</span></p>
+      </dd>
+      <dt>Kifle, 1965</dt>
+      <dd>
+        <p><a href="#kwk_mezgebe_fidel_page_43"></a></p>
+        <p><em>Transcribed Citation:</em><br/>
+        <span style="margin-left:2em;"><cite>Mazgaba Fidal</cite>, K. W. Kifle. Page 43. Artistic Printers, 1965 (1957 EC). Addis Ababa.</span></p>
+        <p><em>Source Citation:</em><br/>
+        <span style="margin-left:2em;" lang="gez"><cite>መዝገበ፡ፊደል</cite>፣ ኪዳነ፡ወልድ፡ክፍሌ። ገጽ ፵፫። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፶፯። አዲስ አበባ።</span></p>
       </dd>
       <dt>Ngongo, 1995</dt>
       <dd>
