update to List counter suffix alignment.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -178,7 +178,7 @@
       <h4>Space after preface colon</h4>
       </section>
       <section id="h_punctuation_preface_colons_introduce_quotation" class="ok">
-      <h4>Colons to introduce quotations or questions</h4>
+      <h4>Preface colons to introduce quotations or questions</h4>
       </section>
     </section>
     <section id="h_punctuation_question_marks" class="ok">
@@ -357,6 +357,40 @@
       </section>
       <section id="h_punctuation_lists_vertical_lists_multilevel" class="ok">
       <h4>Vertical lists with multiple levels (outlines)</h4>
+      <ul style="list-style-type:none">
+       <li>ሀ/ ስጋ
+         <ul style="list-style-type:none">
+           <li>፩/ በግ</li>
+           <li>፪/ ብሬ</li>
+           <li>፫/ ዓሣ</li>
+           <li>፬/ ዶሮ</li>
+        </ul>
+      </li>
+       <li>ለ/ ፍራፍሬ
+         <ul style="list-style-type:none">
+           <li>፩/ ሙዝ</li>
+           <li>፪/ አናናስ</li>
+           <li>፫/ ብርቱካን</li>
+           <li>፬/ ወይን</li>
+         </ul>
+       </li>
+       <li>ሐ/ አትክልት
+         <ul style="list-style-type:none">
+           <li>፩/ ቲማቲም</li>
+           <li>፪/ ጎመን</li>
+           <li>፫/ ሽንኩርት</li>
+           <li>፬/ ድንች</li>
+         </ul>
+       </li>
+       <li>መ/ እህል
+         <ul style="list-style-type:none">
+           <li>፩/ ጤፍ</li>
+           <li>፪/ ስንዴ</li>
+           <li>፫/ ገብስ</li>
+           <li>፬/ ሩዝ</li>
+         </ul>
+       </li>
+      </ul>
       </section>
       <section id="h_punctuation_lists_ordered_list_counter_suffix" class="ok">
       <h4>Ordered list counter suffix</h4>
@@ -366,8 +400,15 @@
       </section>
       <section id="h_punctuation_lists_counter_suffix_alignment" class="ok">
       <h4>List counter suffix alignment</h4>
-<p>Ethiopic corpus will present lists with two styles of alignment. These are a left side alignment at the list counter, or alignment along the list marker (“suffix”). Layout software will align a list at the marker in keeping with the later style. The former style (left justified at counter) may reflect a limitation of the layout technology employed and not a preference of the author, copy editor or typesetter. A depiction of these two alignment styles is presented in the following figures:</p>
-      </section>
+      <p>In vertical lists, the list text of each item should initiate at the same horizontal position from the left margin.
+      <!-- The content of vertical list items should be justified on the left such that the start of list text is at the same horizontal position on a page. -->
+         It  is recommended that this positioning be achieved by aligning the list counter suffixes.  The resulting list should appear as if the list were laid out in a table
+         where the counter and its suffix appear right-justified in the first column, and the list text appearing left justified in the second column. 
+         <a href="#counter_suffix_marker_justified"></a> depicts suffix based list alignment.
+      </p>
+      <figure id="counter_suffix_marker_justified"> <img src="images/list-aligned-on-suffix.png" alt="" width="400"/>
+        <figcaption>Alphabetical list aligned on suffix.</figcaption>
+      </figure>
     </section>
   </section><!-- end of Punctuation section -->
 
@@ -395,7 +436,6 @@
       <section id="h_foreign_language_general" class="ok">
       <h3>General Rules</h3>
       <p><em>Discuss height alignment</em></p>
-      </section>
   </section><!-- end of Non-Ethiopic Languages section -->
 
   <section id="h_numbers">
