Update to Vertical lists punctuated as a sentence

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -354,9 +354,31 @@
       </section>
       <section id="h_punctuation_lists_vertical_lists_punctuated" class="ok">
       <h4>Vertical lists punctuated as a sentence</h4>
+      <p>When vertical list items complete the sentence of the introductory text,
+         commas or semicolons may be used between the items, and a period should follow the final item.
+         Optionally, the introductory paragraph may continue inline following the final list item as depecited in
+         <a href="#fig_punctuation_lists_vertical_lists_punctuated"></a>:
+      </p>
+<p>
+      <figure id="fig_punctuation_lists_vertical_lists_punctuated" style="text-align:left;">
+ድጓ ቅስዱ ያሬድ ከደረሳቸው ፭ቱ ጸዋትወ ዜማዎች አንዱና የመጀመሪያው ነው። ፭ቱም በዝርዝር ሲገለጹ፦
+<div style="margin-left: 20px;">
+ሀ/ ድጓ፣<br/>
+ለ/ ጾመ ድጓ፣<br/>
+ሐ/  ዝማሬ፤<br/>
+መ/ መዋሥዕት፣<br/>
+ሠ/ ምዕራፍ የተሰኙት ናቸው። ለልዑል እግዚአብሔር ክብርና  ምሥጋናይግባውና ስለ ፬ቱ  ጸዋትወ ዜማዎች</div>
+ቀደም ብለን የገለጽን ስለሆነ ከረጅሙ በአጭሩ፣ ድጓ ስለሚለው  ብቻ ለመግለጽ እንሞክራለን። 
+“ድጓ” የሚለው ቃል የዜማ መጽሐፍ ስም ሲሆን ቅዱስ ያሬድ በአምስተኛውና በስድስተኛው  መቶ  ዓመት ላይ በዓፄ  ገ/መስቀል ዘመነ መንግሥት በመንፈስ ቅዱስ  እየተመራ የደረሰውና ያዜመው ነው።
+</p>
+        <figcaption>Punctuation of a vertical list with paragraph continuation.  <em>TBD: Ref ድጓ መግለጫ </em></figcaption>
+      </figure>
+
       </section>
       <section id="h_punctuation_lists_vertical_lists_multilevel" class="ok">
       <h4>Vertical lists with multiple levels (outlines)</h4>
+
+      <figure id="fig_punctuation_lists_vertical_lists_multilevel" style="text-align:left;">
       <ul style="list-style-type:none">
        <li>ሀ/ ስጋ
          <ul style="list-style-type:none">
@@ -391,6 +413,8 @@
          </ul>
        </li>
       </ul>
+        <figcaption>A multilevel Ethiopic ordered list.</figcaption>
+      </figure>
       </section>
       <section id="h_punctuation_lists_ordered_list_counter_suffix" class="ok">
       <h4>Ordered list counter suffix</h4>
@@ -400,13 +424,13 @@
       </section>
       <section id="h_punctuation_lists_counter_suffix_alignment" class="ok">
       <h4>List counter suffix alignment</h4>
-      <p>In vertical lists, the list text of each item should initiate at the same horizontal position from the left margin.
+      <p>In vertical lists, the list item text should initiate at the same horizontal position from the left margin.
       <!-- The content of vertical list items should be justified on the left such that the start of list text is at the same horizontal position on a page. -->
          It  is recommended that this positioning be achieved by aligning the list counter suffixes.  The resulting list should appear as if the list were laid out in a table
          where the counter and its suffix appear right-justified in the first column, and the list text appearing left justified in the second column. 
-         <a href="#counter_suffix_marker_justified"></a> depicts suffix based list alignment.
+         <a href="#fig_counter_suffix_marker_justified"></a> depicts suffix based list alignment.
       </p>
-      <figure id="counter_suffix_marker_justified"> <img src="images/list-aligned-on-suffix.png" alt="" width="400"/>
+      <figure id="fig_counter_suffix_marker_justified"> <img src="images/list-aligned-on-suffix.png" alt="" width="400"/>
         <figcaption>Alphabetical list aligned on suffix.</figcaption>
       </figure>
     </section>
